--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+    <link rel="shortcut icon" type="image/x-icon" href="/images/favicon-32x32.png" />
 
     {{content-for "head"}}
 
